--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,18 @@ h2 {
     100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
+@keyframes runAppa { /* https://stackoverflow.com/questions/41587802/css-animation-from-left-to-right */
+    0% { left: 10%;}
+    50%{ left : 30%;}
+    100%{ left: 10%;}
+    }
+
+@keyframes runNaga { /* https://stackoverflow.com/questions/41587802/css-animation-from-left-to-right */
+    0% { right: 10%;}
+    50%{ right : 30%;}
+    100%{ right: 10%;}
+    }
+
 #appaImage {
     width: 375px;
     position: absolute;
